2013-08-19  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c: Fix typos.

2013-08-19  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c: ret is only used in case of PAM.

2013-08-19  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c: Ignore close() failure before exiting.
	* src/su.c: Ignore failure to set window size in case of SIGWINCH.

2013-08-19  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c: Remove duplicate include of sys/types.h
	* src/su.c: Add missing includes for select()

2013-08-19  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c: Fail if the process group leader or the controlling
	terminal cannot be set.
	* src/su.c: Do not set terminal in RAW mode in case of earlier
	failure.
	* src/su.c: Do not continue in case of tcsetattr failure.

2013-08-19  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c: Check dup2 return values.

2013-08-15  Wolfgang Zarre  <lkdev@essax.com>

	* src/su.c: Create a pseudo TTY to avoid character injection from
	the child to the caller's TTY.

2013-08-15  Nicolas François  <nicolas.francois@centraliens.net>

	* man/login.defs.d/SUB_GID_COUNT.xml: Document newusers behavior
	when the user already have subordinate group IDs.
	* man/login.defs.d/SUB_UID_COUNT.xml: Likewise.
	* man/login.defs.d/SUB_GID_COUNT.xml: Fix typo (MAX<->MIN).
	* man/login.defs.d/SUB_UID_COUNT.xml: Likewise.

2013-08-15  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: Check early if /etc/subuid (/etc/subgid) exists
	when option -v/-V (-w/-W) are provided. 

2013-08-15  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: Fix parse of ranges. The hyphen might be followed
	by a negative integer.

2013-08-15  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/subordinateio.c (find_free_range): max is allowed for new
	ranges.

2013-08-15  Nicolas François  <nicolas.francois@centraliens.net>
